--- a/8-jdk-j2v8-4-6/Dockerfile
+++ b/8-jdk-j2v8-4-6/Dockerfile
@@ -29,7 +29,7 @@ RUN apk add --update --virtual build-dependencies wget git g++ python linux-head
                           ../../node/out/Release/libzlib.a \
                           ../../node/out/Release/libcares.a \
         -Wl,--end-group \
-        -lrt -z noexecstack && \
+        -lrt -z noexecstack -D NODE_COMPATIBLE=1 && \
 
     # Cleanup
     apk del build-dependencies && \
